--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,20 @@
+; Sky-Spy Dual-Band RemoteID Scanner
+; Optimized for XIAO ESP32-C5 with 2.4GHz + 5GHz WiFi 6 support
+
+[env:seeed_xiao_esp32c5]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+framework = arduino
+board = esp32c5
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+    -std=gnu++17
+    -DARDUINO_XIAO_ESP32C5
+    -DBOARD_HAS_PSRAM
+lib_deps =
+    bblanchon/ArduinoJson@^6.18.5
+
+; Legacy ESP32-S3 support (original board)
 [env:seeed_xiao_esp32s3]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 framework = arduino
@@ -6,4 +23,5 @@ monitor_speed = 115200
 upload_speed = 115200
 build_flags = -std=gnu++17
 lib_deps =
-  bblanchon/ArduinoJson@^6.18.5
+    bblanchon/ArduinoJson@^6.18.5
+
